# kbcraft

./: .dockerignore  .env.example  .gitignore  .python-version  CI_FIXES.md  CI_SETUP.md  CLAUDE.md  Dockerfile  Dockerfile.dev  MANIFEST.in  Makefile  README.md  docker-compose.dev.yml  docker-compose.override.yml  docker-compose.yml  pyproject.toml  test_ci_locally.sh  validate_setup.py
.github/: CI_QUICK_REFERENCE.md  TROUBLESHOOTING_CI.md
.github/workflows/: README.md  ci-improved.yml  ci.yml  lint-and-test.yml
configs/: embedding.yaml  storage.yaml  vector_store.yaml
docker/dev/: entrypoint.sh
kb/: CI_FIXES.md  CI_QUICK_REFERENCE.md  DOCKER_ARCHITECTURE.md  TESTING_AND_CI.md  class_diagram.html  embedding_models_report.md  test_cli_index_openai_flow_review.md
scripts/: RUN_test_cli_index_openai.md  build_faiss_index.py  build_faiss_index_qwen.py  e2e_faiss_s3.py  e2e_faiss_s3.sh  s3_export.py  test_cli_index.py  test_cli_index_openai.py  test_cli_index_openai.sh  test_cli_index_qwen.py  test_ollama.py
src/kbcraft/: __init__.py  chunker.py  cli.py  config.py  embedder.py  organize.py  scaffold.py  selector.py  sync.py  tokenizer.py  utils.py
src/kbcraft/embedders/: __init__.py  ollama.py  openai.py  qwen.py
src/kbcraft/vector_stores/: __init__.py  chroma.py  faiss.py  pinecone.py  qdrant.py
tests/: __init__.py  test_chunker.py  test_embedder.py  test_embedders_ollama.py  test_kbcraft.py  test_organize.py  test_scaffold.py  test_selector.py  test_tokenizer.py
