[tool.poetry]
name = "kbcraft"
version = "0.1.0"
description = "Build structured, RAG-ready knowledge bases from Markdown"
authors = ["kbcraft <example@example.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/yourusername/kbcraft"
repository = "https://github.com/yourusername/kbcraft"
documentation = "https://github.com/yourusername/kbcraft"
keywords = ["rag", "markdown", "knowledge-base", "vector-store", "embeddings"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
packages = [{include = "kbcraft", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.15"
faiss-cpu = "^1.13.2"
chromadb = "^1.5.5"
langchain-text-splitters = ">=0.2,<1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
pytest-cov = "^4.0"
black = "^23.0"
ruff = "^0.1.0"
mypy = "^1.0"

[tool.poetry.extras]
chroma = ["chromadb"]
qdrant = ["qdrant-client"]
pinecone = ["pinecone-client"]
faiss = ["faiss-cpu"]

[tool.poetry.scripts]
kbcraft = "kbcraft.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py38']

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
# Main rules only for CI
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
]
ignore = [
    "E501",  # Line too long (handled by black)
]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=kbcraft --cov-report=term-missing"
